feat: add Puxian station navigation
